# Zestimate-Agent

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/evals/: known_addresses.jsonl  run_eval.py
backend/src/zestimate_agent/: __init__.py  agent.py  api.py  auth.py  cache.py  circuit_breaker.py  cli.py  config.py  fetch.py  middleware.py  models.py  normalize.py  observability.py  pipeline.py  resolve.py  validate.py
backend/src/zestimate_agent/providers/: base.py  direct.py  rapidapi.py
backend/tests/: conftest.py  test_agent.py  test_api.py  test_cache.py  test_circuit_breaker.py  test_cli.py  test_direct.py  test_eval.py  test_fetch.py  test_normalize.py  test_observability.py  test_pipeline.py  test_resolve.py  test_validate.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AdminPanel.tsx  ErrorCard.tsx  Header.tsx  HistoryPanel.tsx  ResultCard.tsx  SearchForm.tsx  StreamProgress.tsx
