[project]
name = "zestimate-agent"
version = "0.1.0"
description = "Production-grade Python agent that returns current Zillow Zestimates for US addresses"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Devanshu Gohil" }]

dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "typer>=0.12",
    "structlog>=24.0",
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "rapidfuzz>=3.9",
    "tenacity>=9.0",
    "platformdirs>=4.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "aiosqlite>=0.20",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-vcr>=1.0.2",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
zestimate = "zestimate_agent.cli:app"
zestimate-api = "zestimate_agent.api:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zestimate_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["zestimate_agent"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"
markers = [
    "live: tests that hit real external APIs (skipped by default; run with -m live)",
]
